--- a/src/app/pages/components/account/usercontact/usercontact.component.html
+++ b/src/app/pages/components/account/usercontact/usercontact.component.html
@@ -1,13 +1,13 @@
-<div class="flex flex-column align-items-center bg-gray-200 p-5 justify-content-center">
-  <div class="flex flex-column border-round m-2">
-    <div class="align-items-center justify-content-center border-round m-2">
+<div class="container">
+  <div class="row">
+    <div class="header">
       <h3>{{'userContact.header' | transloco}}
       </h3>
       <p class="flex flex-wrap">
         {{'userContact.headerP' | transloco}}
       </p>
     </div>
-    <div class="flex flex-column w-full border-1 border-round p-4">
+    <div class="content">
      <div class="align-content-center">
       <div><h4 class="block">{{'userContact.sms' | transloco}}</h4></div>
       <div class="flex flex-row align-content-center align-items-center justify-content-evenly"  >
