--- a/src/app/pages/components/account/userinfo/userinfo.component.html
+++ b/src/app/pages/components/account/userinfo/userinfo.component.html
@@ -1,61 +1,73 @@
-<div class="flex flex-column align-items-center justify-content-center ">
-  <div class="align-items-center w-full justify-content-center border-round m-2">
-    <h2>{{'userinfoForm.header' | transloco}}</h2>
-    <p class="flex flex-wrap">
-      {{'userinfoForm.headerP' | transloco}}
-    </p>
-  </div>
-  <div class="flex align-items-center w-full justify-content-center border-round m-2">
+<div class="container ">
+  <div class="row">
+    <div class="header">
+      <h2>{{'userinfoForm.header' | transloco}}</h2>
+      <p class="flex flex-wrap">
+        {{'userinfoForm.headerP' | transloco}}
+      </p>
+    </div>
     <form [formGroup]="accountForm">
-      <div class="flex flex-row flex-wrap justify-content-around">
+      <div class="form-container">
         <span class="p-float-label m-4">
+          <i class="pi pi-user" style="color: #000"></i>
           <input pInputText id="name" formControlName="name" />
           <label htmlFor="name">{{'userinfoForm.nameLabel' | transloco}}</label>
         </span>
         <span class="p-float-label m-4">
+          <i class="pi pi-user" style="color: #000"></i>
           <input pInputText id="surname" formControlName="surname" />
           <label htmlFor="surname">{{'userinfoForm.surnameLabel' | transloco}}</label>
         </span>
+        <span class="p-float-label m-4">
+          <i class="pi pi-envelope" style="color: #000"></i>
+          <input pInputText id="email" formControlName="email" />
+          <label htmlFor="email">{{'userinfoForm.emailLabel' | transloco}}</label>
+        </span>
+        <span class="p-float-label m-4">
+          <i class="pi pi-user" style="color: #000"></i>
+          <input pInputText id="username" formControlName="username" />
+          <label htmlFor="username">{{'userinfoForm.usernameLabel' | transloco}}</label>
+        </span>
+        
       </div>
-     <div class="flex flex-column align-items-center ">
-      <div class="flex align-items-center ">
-        <span class="p-float-label m-4 ">
+      <div class="form-container">
+        <span class="p-float-label m-4">
+          <i class="pi pi-calendar" style="color: #000"></i>
           <p-calendar
             formControlName="calendar"
-            class="w-24rem"
-            [showIcon]="true"
+            styleClass="calendar"
+            [showIcon]="false"
             id="calendar"
           ></p-calendar>
           <label htmlFor="calendar">{{'userinfoForm.date' | transloco}}</label>
         </span>
-      </div>
-      <div class="flex align-items-center ">
-        <span class="button-style mt-0 ">
-          <button class="button w-11rem">{{'userinfoForm.buttonLabel' | transloco}}</button>
+        <span class="p-float-label m-4">
+          <i class="pi pi-map-marker" style="color: #000"></i>
+          <input pInputText id="address" formControlName="address" />
+          <label htmlFor="address">{{'userinfoForm.addressLabel' | transloco}}</label>
+        </span>
+        <span class="p-float-label m-4">
+          <i class="pi pi-phone" style="color: #000"></i>
+          <input pInputText id="phone" formControlName="phone" />
+          <label htmlFor="phone">{{'userinfoForm.phoneLabel' | transloco}}</label>
+        </span>
+        <span class="p-float-label m-4 flex flex-row">
+          <div *ngFor="let gender of Genders" class="field-checkbox mx-4">
+            <label [for]="gender.key" class="mt-3">{{ gender.name }}</label>
+            <p-radioButton
+              [inputId]="gender.key"
+              [value]="gender"
+              formControlName="gender"
+              class="flex flex-row ml-2"
+            ></p-radioButton>
+          </div>
         </span>
       </div>
-     </div>
-
-
-  <div class="flex flex-column align-items-center justify-content-center bg-gray-200 p-4 border-round m-2">
-    <div class="align-items-center justify-content-center border-round m-2">
-      <h2>{{'userinfoForm.contactHeader' | transloco}}</h2>
-      <p class="flex flex-wrap">
-        {{'userinfoForm.contactHeaderP' | transloco}}
-      </p>
-    </div>
-   <div class="flex ">
-    <span class="p-float-label m-4">
-      <input pInputText id="email" formControlName="email" />
-      <label htmlFor="email">{{'userinfoForm.emailLabel' | transloco}}</label>
-    </span>
-   </div>
-    <div class="flex align-items-center ">
-      <span class="button-style mt-0 ">
-        <button class="button w-11rem">{{'userinfoForm.emailButton' | transloco}}</button>
-      </span>
-    </div>
-  </div>
+      <div class="flex w-full  justify-content-center">
+        <span class="button-style">
+          <button pButton type="submit" class="button">{{'userinfoForm.buttonLabel' | transloco}}</button>
+        </span>
+      </div>
 </form>
 </div>
 </div>
