--- a/src/app/pages/components/orders/content-table/content-table.component.html
+++ b/src/app/pages/components/orders/content-table/content-table.component.html
@@ -42,10 +42,13 @@
           ></p-tag></td>
           <td>$ {{ product.priceStacked }}</td>
           <td class="button-style">
+           <div>
             <i
-              class="button pi pi-trash w-full border-round"
-              (click)="removeFromCartOrders(product.id)"
-            ></i>
+            class="button pi pi-trash"
+            style="color: #3498db;"
+            (click)="removeFromCartOrders(product.id)"
+          ></i>
+           </div>
           </td>
         </tr>
       </ng-template>
