--- a/src/app/pages/components/about/about.component.scss
+++ b/src/app/pages/components/about/about.component.scss
@@ -3,3 +3,100 @@
   line-height: 40px;
   padding: 20px;
 }
+$primary-color: #3498db;
+$secondary-color: #1071b3;
+$dark-text: #34495e;
+$background-color: #ecf0f1;
+
+.flex {
+  display: flex;
+}
+
+.block {
+  display: block;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.bg-white {
+  background-color: #fff;
+}
+
+.font-bold {
+  font-weight: bold;
+}
+
+.m-2 {
+  margin: 2px;
+}
+
+.px-5 {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.py-3 {
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
+.border-round {
+  border-radius: 8px;
+}
+
+.header-title {
+  h3 {
+    text-align: center;
+  }
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  padding: 20px;
+ 
+}
+
+.white-space-normal {
+  white-space: normal;
+}
+
+.p-col-8 {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+}
+
+h1 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+h4 {
+  font-size: 1rem;
+  margin-bottom: 5px;
+}
+
+.img {
+  max-width: 100%;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .flex {
+    flex-direction: column;
+  }
+}
