--- a/src/app/pages/components/account/userpassword/userpassword.component.html
+++ b/src/app/pages/components/account/userpassword/userpassword.component.html
@@ -1,30 +1,32 @@
-<form class="flex flex-column align-items-center w-full bg-gray-200 p-5 justify-content-center" [formGroup]="newpassForm">
-  <div class="flex flex-column align-items-center justify-content-center border-round m-2">
-    <div class="align-items-center justify-content-center border-round m-2">
+<form class="container  " [formGroup]="newpassForm">
+  <div class="row">
+    <div class="header ">
       <p class="flex flex-wrap">
         {{'userpassForm.infoP' | transloco}}
       </p>
     </div>
    <div class="flex">
-    <span class="p-float-label m-4">
+    <span class="p-float-label">
+      <i class="pi pi-lock" style="color: #000"></i>
       <input pInputText id="currentPassword" formControlName="currentPassword" />
       <label htmlFor="currentPassword">{{'userpassForm.currentPass' | transloco}}</label>
     </span>
    </div>
    <div class="flex ">
-    <span class="p-float-label m-4">
+    <span class="p-float-label">
+      <i class="pi pi-lock" style="color: #000"></i>
       <input pInputText id="newPassword" formControlName="newPassword" />
       <label htmlFor="newPassword">{{'userpassForm.newPass' | transloco}}</label>
     </span>
    </div>
-   <div class="align-items-center justify-content-center border-round m-2">
-    <p class="flex flex-wrap">
+   <div>
+    <p class="flex text-danger">
       {{'userpassForm.warnP' | transloco}}
     </p>
   </div>
-    <div class="flex align-items-center ">
-      <span class="button-style mt-0 ">
-        <button class="button w-11rem">{{'userpassForm.buttonLabel' | transloco}}</button>
+    <div class="flex">
+      <span class="button-style">
+        <button pButton class="button">{{'userpassForm.buttonLabel' | transloco}}</button>
       </span>
     </div>
 
