--- a/src/app/pages/components/favorites/content-favorites/content-favorites.component.scss
+++ b/src/app/pages/components/favorites/content-favorites/content-favorites.component.scss
@@ -1,75 +1,49 @@
-.flex {
+$primary-color: #3498db;
+
+.container {
   display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
-
-.w-full {
+  flex-direction: column;
   width: 100%;
+  min-height: 50vh;
 }
 
-.container-table {
-  padding: 1rem;
-  justify-content: center;
-  align-items: center;
-  text-align: center
-}
+:host ::ng-deep{
+  .table {
+    margin-left: 25px;
+    margin-right: 25px;
+    width: 100%;
+    max-height: 100vh;
 
-.table {
-  background-color: #ffffff;
-  border: 1px solid #e0e0e0;
-  border-radius: 0.5rem;
-  overflow: hidden;
+    th {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+    }
 
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-th, td {
-  padding: 1rem;
-  text-align: center;
-}
-
-th {
-  background-color: #333;
-  color: #fff;
-}
-
-td {
-  border-bottom: 1px solid #e0e0e0;
-}
-
-.button-style {
-  text-align: center;
-}
-
-.button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  border-radius: 0.25rem;
-}
-
-.container-price {
-  background-color: #ffffff;
-  border: 1px solid #e0e0e0;
-  border-radius: 0.5rem;
-  padding: 1rem;
-  text-align: center;
-  margin-top: 1rem;
-}
-
-h3 {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
-
-hr {
-  border: 0.5px solid #e0e0e0;
-  margin: 1rem 0;
+    td {
+      border: none;
+      border-bottom: 1px solid $primary-color;
+      padding-left: 15px;
+      cursor: pointer;
+      
+      div{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .button-style {
+        max-height: 100%; // Sil butonunu dikey eksende ortala
+        i {
+          cursor: pointer;
+          font-size: 1.5em;
+        }
+      }
+    
+  
+      p-image {
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+    }
+  }
 }
