--- a/src/app/pages/components/orders/content-table/content-table.component.scss
+++ b/src/app/pages/components/orders/content-table/content-table.component.scss
@@ -4,23 +4,78 @@ $danger-color: #e74c3c;
 $dark-text: #34495e;
 $light-text: #ecf0f1;
 $background-color: #ecf0f1;
+$breakpoint-tablet: 768px;
 
-:host ::ng-deep{
-  .table{
+:host ::ng-deep {
+  .table {
     margin-left: 25px;
+    margin-right: 25px;
     width: 100%;
     max-height: 100vh;
 
-    th{
+    th {
       background-color: #333;
       color: #fff;
       padding: 20px;
     }
 
-    td{
+    td {
       border: none;
-      border-bottom: 2px solid $primary-color;
-      padding: 5px;
+      border-bottom: 1px solid $primary-color;
+      padding-left: 15px;
+      cursor: pointer;
+      div{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .button-style {
+        max-height: 100%; // Sil butonunu dikey eksende ortala
+        i {
+          cursor: pointer;
+          font-size: 1.5em;
+        }
+      }
+    }
+  }
+
+  .container-price {
+    width: 100%; // Özet bölümü tam genişlikte olsun
+    padding: 20px; // Kenar boşlukları
+
+    h3 {
+      font-size: 1.5rem;
+      margin-bottom: 10px;
+    }
+
+    div {
+      margin-bottom: 10px;
+    }
+
+    hr {
+      border: none;
+      height: 1px;
+      background-color: #ddd;
+      margin: 10px 0;
+    }
+
+    .button-style {
+      button {
+        width: 100%; // Tam genişlikte olacak
+        justify-content: center;
+      }
+    }
+  }
+
+  // Ekran genişliği 768px ve üzeri için özel stiller
+  @media (min-width: $breakpoint-tablet) {
+    .table {
+      margin-left: 50px;
+      margin-right: 50px;
+    }
+
+    .container-price {
+      width: 30%; // Özet bölümünün genişliği
     }
   }
 }
