--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -2,13 +2,12 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  margin: -16px;
+  margin: 0;
   padding: 0;
 }
 
 .app-content {
-  flex: 1; /* İçerik alanını doldurmak için esneklik ekleyin */
-  padding: 35px;
+  padding:10px;
 
 }
 
