--- a/src/app/pages/components/account/userinfo/userinfo.component.html
+++ b/src/app/pages/components/account/userinfo/userinfo.component.html
@@ -1,9 +1,9 @@
-<div class="container ">
+<div class="container">
   <div class="row">
     <div class="header">
-      <h2>{{'userinfoForm.header' | transloco}}</h2>
+      <h2>{{ "userinfoForm.header" | transloco }}</h2>
       <p class="flex flex-wrap">
-        {{'userinfoForm.headerP' | transloco}}
+        {{ "userinfoForm.headerP" | transloco }}
       </p>
     </div>
     <form [formGroup]="accountForm">
@@ -11,26 +11,28 @@
         <span class="p-float-label m-4">
           <i class="pi pi-user" style="color: #000"></i>
           <input pInputText id="name" formControlName="name" />
-          <label htmlFor="name">{{'userinfoForm.nameLabel' | transloco}}</label>
-        </span>
-        <span class="p-float-label m-4">
-          <i class="pi pi-user" style="color: #000"></i>
-          <input pInputText id="surname" formControlName="surname" />
-          <label htmlFor="surname">{{'userinfoForm.surnameLabel' | transloco}}</label>
-        </span>
-        <span class="p-float-label m-4">
-          <i class="pi pi-envelope" style="color: #000"></i>
-          <input pInputText id="email" formControlName="email" />
-          <label htmlFor="email">{{'userinfoForm.emailLabel' | transloco}}</label>
+          <label htmlFor="name">{{
+            "userinfoForm.nameLabel" | transloco
+          }}</label>
         </span>
         <span class="p-float-label m-4">
           <i class="pi pi-user" style="color: #000"></i>
           <input pInputText id="username" formControlName="username" />
-          <label htmlFor="username">{{'userinfoForm.usernameLabel' | transloco}}</label>
+          <label htmlFor="username">{{
+            "userinfoForm.usernameLabel" | transloco
+          }}</label>
         </span>
-        
-      </div>
-      <div class="form-container">
+        <span class="p-float-radio m-4" >
+          <div *ngFor="let gender of Genders" class="mx-2">
+            <p-radioButton
+              [inputId]="gender.key"
+              [value]="gender"
+              formControlName="gender"
+              styleClass="radio"
+            ></p-radioButton>
+            <label [for]="gender.key">{{ gender.name }}</label>
+          </div>
+        </span>
         <span class="p-float-label m-4">
           <i class="pi pi-calendar" style="color: #000"></i>
           <p-calendar
@@ -39,35 +41,48 @@
             [showIcon]="false"
             id="calendar"
           ></p-calendar>
-          <label htmlFor="calendar">{{'userinfoForm.date' | transloco}}</label>
+          <label htmlFor="calendar">{{
+            "userinfoForm.date" | transloco
+          }}</label>
+        </span>
+      </div>
+      <div class="form-container">
+        <span class="p-float-label m-4">
+          <i class="pi pi-user" style="color: #000"></i>
+          <input pInputText id="surname" formControlName="surname" />
+          <label htmlFor="surname">{{
+            "userinfoForm.surnameLabel" | transloco
+          }}</label>
         </span>
         <span class="p-float-label m-4">
-          <i class="pi pi-map-marker" style="color: #000"></i>
-          <input pInputText id="address" formControlName="address" />
-          <label htmlFor="address">{{'userinfoForm.addressLabel' | transloco}}</label>
+          <i class="pi pi-envelope" style="color: #000"></i>
+          <input pInputText id="email" formControlName="email" />
+          <label htmlFor="email">{{
+            "userinfoForm.emailLabel" | transloco
+          }}</label>
         </span>
         <span class="p-float-label m-4">
           <i class="pi pi-phone" style="color: #000"></i>
           <input pInputText id="phone" formControlName="phone" />
-          <label htmlFor="phone">{{'userinfoForm.phoneLabel' | transloco}}</label>
+          <label htmlFor="phone">{{
+            "userinfoForm.phoneLabel" | transloco
+          }}</label>
         </span>
-        <span class="p-float-label m-4 flex flex-row">
-          <div *ngFor="let gender of Genders" class="field-checkbox mx-4">
-            <label [for]="gender.key" class="mt-3">{{ gender.name }}</label>
-            <p-radioButton
-              [inputId]="gender.key"
-              [value]="gender"
-              formControlName="gender"
-              class="flex flex-row ml-2"
-            ></p-radioButton>
-          </div>
+        <span class="p-float-label m-4">
+          <i class="pi pi-map-marker" style="color: #000"></i>
+          <input pInputText id="address" formControlName="address" />
+          <label htmlFor="address">{{
+            "userinfoForm.addressLabel" | transloco
+          }}</label>
         </span>
       </div>
-      <div class="flex w-full  justify-content-center">
+      <div class="flex w-full justify-content-center">
         <span class="button-style">
-          <button pButton type="submit" class="button">{{'userinfoForm.buttonLabel' | transloco}}</button>
+          <button pButton type="submit" class="button">
+            {{ "userinfoForm.buttonLabel" | transloco }}
+          </button>
         </span>
       </div>
-</form>
-</div>
+    </form>
+  </div>
 </div>
