--- a/src/app/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/src/app/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.html
@@ -1,9 +1,24 @@
 <div class="container">
-  <div class="column flex flex-column">
-    <div routerLink="/user-management">User-Management</div>
-    <div routerLink="/product-management">Product-Management</div>
-    <div>another</div>
-    <div>another</div>
-    <div>another</div>
+  <div class="column">
+    <div routerLink="/user-management">
+      <i class="pi pi-users"></i>
+      User-Management
+    </div>
+    <div routerLink="/product-management">
+      <i class="pi pi-shopping-cart"></i>
+      Product-Management
+    </div>
+    <div routerLink="/order-management">
+      <i class="pi pi-file"></i>
+      Orders-Management
+    </div>
+    <div routerLink="/reporting">
+      <i class="pi pi-chart-bar"></i>
+      Reporting
+      </div>
+    <div routerLink="/profil-management">
+      <i class="pi pi-id-card"></i>
+      Profil-Management
+    </div>
   </div>
 </div>
