--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,21 +1,155 @@
-.container{
-  padding: 20px;
-}
+// .container {
+//   display: flex;
+//   flex-direction: column;
+//   height: 100vh;
+// }
 
+// .header {
+//   background-color: #555; /* Başlık arka plan rengi */
+//   color: #fff; /* Başlık metin rengi */
+//   padding: 10px;
+// }
 
-.product-body{
+// .product-body {
+//   display: flex;
+//   flex: 1;
+// }
+
+// .product-filter {
+//   width: 250px; /* Filtre bölümü genişliği */
+//   background-color: #ecf0f1; /* Filtre bölümü arka plan rengi */
+//   padding: 10px;
+// }
+
+// .product-list {
+//   flex: 1;
+//   padding: 10px;
+// }
+.container {
   display: flex;
-  flex-direction: row;
-  margin-top: 10px;
+  flex-direction: column;
+  height: 100vh;
 }
-.product-filter{
-  width: 300px;
-  height: 100%;
-  float: left;
 
+.product-body {
+  display: flex;
+  flex: 1;
 }
-.product-list{
-  position: relative;
-  left: 50px;
-  width: 1000px;
+
+.product-filter {
+  width: 250px; /* Filtre bölümü genişliği */
+  background-color: #ecf0f1; /* Filtre bölümü arka plan rengi */
+  padding: 10px;
+}
+
+.product-list {
+  flex: 1;
+  padding: 10px;
+}
+$borderRadius: 10px;
+$spacer: 1rem;
+$primary: #C4151C;
+$text: #fff;
+$linkHeight: $spacer * 3.5;
+$timing: 250ms;
+$transition: $timing ease all;
+$linkWidth: 10rem;
+
+.header{
+    $ref: &;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #555;  
+    color: $text;
+    padding: 0 $spacer*2;
+    box-shadow: 0 0 40px rgba(0,0,0,0.03);
+    height: 6rem;
+    display: flex;
+    align-items:center;
+    gap: 3rem;
+  }
+
+  .navbar{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+  &__menu{
+    position: relative;
+    display:flex;
+  }
+  &__link{
+    position:relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+    align-items: center;
+    justify-content: center;
+    height: $linkHeight;
+    width: $linkWidth;
+    color: $text;
+    transition: $transition;
+    text-decoration: none;
+    width: $linkWidth;
+    text-transform: uppercase;
+    transition: 500ms ease all;
+    svg{
+      transition: 500ms ease all;
+    }
+    &:hover{
+      svg{
+        stroke: $primary;
+      }
+    }
+    .navbar:not(:hover) &:focus,
+    &:hover{
+      span{
+        opacity: 1;
+        transform: translate(0);
+      }
+    }
+  }
+  &__item{
+    &:last-child{
+      &:before {
+        content: '';
+        position: absolute;
+        left: -8rem;
+        margin-left: $linkWidth/2;
+        bottom: -1.25rem;
+        height: 0.5rem;
+        width: 2px;
+        background: $primary;
+        $speedlineColor: rgba(#fff,0.2);
+        $speedGap: 3rem;
+        $shadow : 0 -0.5rem $primary,0 -0.5rem $primary, 0 0 $speedGap 0.5rem $primary,2rem 0 0 $speedlineColor, -$speedGap 0 0 $speedlineColor;
+        @for $i from 2 to 120{
+          $shadow: $shadow + #{","}+ $i*$speedGap 0 0 $speedlineColor;
+          $shadow: $shadow + #{","}+ $i*-$speedGap 0 0 $speedlineColor;
+        }
+        box-shadow: $shadow;
+        transition: 500ms ease all;
+      }
+    }
+    
+    @for $i from 1 to 12 {
+      &:first-child:nth-last-child(#{$i}),
+      &:first-child:nth-last-child(#{$i}) ~ li {
+        @for $j from 1 to $i {
+          &:nth-child(#{$j}):hover{
+            ~ li:last-child:before {
+              left: (100% / $i) * ($j - 1);
+            }
+          }
+        }
+        &:last-child:hover:before{
+          left: (100% / $i) * ($i - 1);
+        }
+      }
+    }
+    
+  }
 }
