--- a/src/app/pages/components/main/login/login.component.html
+++ b/src/app/pages/components/main/login/login.component.html
@@ -7,34 +7,35 @@
       <h2>Orion Innovation</h2>
     </div>
     <span class="p-float-label mt-4">
-      <i class="pi pi-user" style="color: #000"></i>
+      <i class="pi pi-envelope" style="color: #000"></i>
       <input
         pInputText
-        id="username"
-        formControlName="username"
-        pTooltip="{{ 'loginForm.usernameTooltip' | transloco }}"
+        type="email"
+        id="email"
+        formControlName="email"
+        pTooltip="{{ 'loginForm.emailTooltip' | transloco }}"
       />
-      <label htmlFor="username">{{
-        "loginForm.usernameLabel" | transloco
+      <label htmlFor="email">{{
+        "loginForm.emailLabel" | transloco
       }}</label>
     </span>
     <small
       *ngIf="
-        userFormLogin.get('username')?.invalid &&
-        userFormLogin.get('username')?.touched
+        userFormLogin.get('email')?.invalid &&
+        userFormLogin.get('email')?.touched
       "
       class="text-red-500"
     >
       {{
-        userFormLogin.get("username").errors != null &&
-        userFormLogin.get("username").errors["whitespace"]
-          ? ("registerForm.usernameSmall" | transloco)
+        userFormLogin.get("email").errors != null &&
+        userFormLogin.get("email").errors["whitespace"]
+          ? ("registerForm.emailSmall" | transloco)
           : ""
       }}
       {{
-        userFormLogin.get("username").errors != null &&
-        userFormLogin.get("username").errors["required"]
-          ? ("registerForm.usernameSmall" | transloco)
+        userFormLogin.get("email").errors != null &&
+        userFormLogin.get("email").errors["required"]
+          ? ("registerForm.emailSmall" | transloco)
           : ""
       }}
     </small>
@@ -97,7 +98,7 @@
    </div>
    <div>
     <span class="button-style mt-4">
-      <button pButton class="button" (onClick)="onSubmitLogin()">
+      <button pButton class="button" (click)="onSubmitLogin()">
         {{ "loginForm.buttonLabel" | transloco }}
       </button>
     </span>
