--- a/src/app/pages/components/product/card/card.component.scss
+++ b/src/app/pages/components/product/card/card.component.scss
@@ -4,7 +4,7 @@ width: 100%;}
   text-decoration: none;
   color: black;
 }
-.search-text{
+.search{
   position: absolute;
   z-index: 1;
   margin-top: 15px;
