--- a/src/app/dashboard/components/product-management/product-sidebar/product-sidebar.component.html
+++ b/src/app/dashboard/components/product-management/product-sidebar/product-sidebar.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="column flex flex-column align-content-between">
-    <div class="flex my-3" [routerLink]="['/product-management', 'get-product']">get-product</div>
-    <div [routerLink]="['/product-management', 'add-product']">add-product</div>
-    <div>update-product</div>
+    <div class="flex my-3" [routerLink]="['/creoter/product-management','get-product']">get-product</div>
+    <div [routerLink]="['/creoter/product-management','add-product']">add-product</div>
+    <div>deneme</div>
     <div></div>
-    <div>another</div>
+    <div>deneme</div>
   </div>
 </div>
