--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -118,7 +118,7 @@ $linkWidth: 10rem;
         content: '';
         position: absolute;
         left: -8rem;
-        margin-left: $linkWidth/2;
+        margin-left: calc($linkWidth/2);
         bottom: -1.25rem;
         height: 0.5rem;
         width: 2px;
@@ -141,12 +141,12 @@ $linkWidth: 10rem;
         @for $j from 1 to $i {
           &:nth-child(#{$j}):hover{
             ~ li:last-child:before {
-              left: (100% / $i) * ($j - 1);
+              left: (calc(100% / $i)) * ($j - 1);
             }
           }
         }
         &:last-child:hover:before{
-          left: (100% / $i) * ($i - 1);
+          left: (calc(100% / $i)) * ($i - 1);
         }
       }
     }
