--- a/src/app/pages/components/account/account-sidebar/account-sidebar.component.html
+++ b/src/app/pages/components/account/account-sidebar/account-sidebar.component.html
@@ -1,16 +1,16 @@
 <div class="container">
   <div class="column">
-    <a [routerLink]="['/account', 'user-info']">
+    <a [routerLink]="['user-info']">
       <div>
         {{'accountForm.userInfoPanel' | transloco}}
       </div>
     </a>
-    <a [routerLink]="['/account', 'change-password']">
+    <a [routerLink]="['change-password']">
       <div>
         {{'accountForm.changePassPanel' | transloco}}
       </div>
     </a>
-    <a [routerLink]="['/account', 'user-contact']">
+    <a [routerLink]="['user-contact']">
       <div>
         {{'accountForm.contactPanel' | transloco}}
       </div>
