--- a/src/app/pages/components/account/userpassword/userpassword.component.html
+++ b/src/app/pages/components/account/userpassword/userpassword.component.html
@@ -1,34 +1,64 @@
-<form class="container  " [formGroup]="newpassForm">
+<form class="container" [formGroup]="newpassForm">
   <div class="row">
-    <div class="header ">
+    <div class="header">
       <p class="flex flex-wrap">
-        {{'userpassForm.infoP' | transloco}}
+        {{ "userpassForm.infoP" | transloco }}
       </p>
     </div>
-   <div class="flex">
-    <span class="p-float-label">
-      <i class="pi pi-lock" style="color: #000"></i>
-      <input pInputText id="currentPassword" formControlName="currentPassword" />
-      <label htmlFor="currentPassword">{{'userpassForm.currentPass' | transloco}}</label>
-    </span>
-   </div>
-   <div class="flex ">
-    <span class="p-float-label">
-      <i class="pi pi-lock" style="color: #000"></i>
-      <input pInputText id="newPassword" formControlName="newPassword" />
-      <label htmlFor="newPassword">{{'userpassForm.newPass' | transloco}}</label>
-    </span>
-   </div>
-   <div>
-    <p class="flex text-danger">
-      {{'userpassForm.warnP' | transloco}}
-    </p>
-  </div>
     <div class="flex">
-      <span class="button-style">
-        <button pButton class="button">{{'userpassForm.buttonLabel' | transloco}}</button>
+      <span class="p-float-label">
+        <i class="pi pi-lock" style="color: #000"></i>
+        <p-password
+          id="currentPassword"
+          formControlName="currentPassword"
+          styleClass="password"
+          [toggleMask]="true"
+          [feedback]="false"
+        />
+        <label htmlFor="currentPassword">{{
+          "userpassForm.currentPass" | transloco
+        }}</label>
       </span>
     </div>
-
+    <div class="flex">
+      <span class="p-float-label">
+        <i class="pi pi-lock" style="color: #000"></i>
+        <p-password
+          id="password"
+          formControlName="password"
+          styleClass="password"
+          [toggleMask]="true"
+        />
+        <label htmlFor="password">{{
+          "userpassForm.newPass" | transloco
+        }}</label>
+      </span>
+    </div>
+    <div class="flex">
+      <span class="p-float-label">
+        <i class="pi pi-lock" style="color: #000"></i>
+        <p-password
+          id="confirmpassword"
+          formControlName="confirmpassword"
+          styleClass="password"
+          [toggleMask]="true"
+        />
+        <label htmlFor="confirmpassword">{{
+          "userpassForm.newCPass" | transloco
+        }}</label>
+      </span>
+    </div>
+    <div>
+      <p class="flex text-danger">
+        {{ "userpassForm.warnP" | transloco }}
+      </p>
+    </div>
+    <div class="flex">
+      <span class="button-style">
+        <button pButton class="button" >
+          {{ "userpassForm.buttonLabel" | transloco }}
+        </button>
+      </span>
+    </div>
   </div>
 </form>
