--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,37 +2,37 @@
 <div class="container">
   <div class="header">
     <div class="header__logo">
-      <strong>LOGO</strong>
+      <strong [routerLink]="['/' , 'pages']" style="cursor: pointer;">pages</strong>
     </div>
     <nav class="navbar">
       <ul class="navbar__menu">
         <li class="navbar__item">
-          <a routerLink="/user-management" class="navbar__link"
+          <a [routerLink]="['user-management']" class="navbar__link"
             ><i class="pi pi-home"></i><span>Home</span>
           </a>
         </li>
         <li class="navbar__item">
-          <a routerLink="/product-management" class="navbar__link"
+          <a [routerLink]="['product-management']" class="navbar__link"
             ><i class="pi pi-inbox"></i><span>Messages</span></a
           >
         </li>
         <li class="navbar__item">
-          <a routerLink="/order-management" class="navbar__link"
+          <a [routerLink]="['order-management']" class="navbar__link"
             ><i class="pi pi-users"></i><span>Customers</span></a
           >
         </li>
         <li class="navbar__item">
-          <a routerLink="/reporting" class="navbar__link"
+          <a [routerLink]="['reporting']" class="navbar__link"
             ><i class="pi pi-file"></i><span>Projects</span></a
           >
         </li>
         <li class="navbar__item">
-          <a routerLink="/profil-management" class="navbar__link"
+          <a [routerLink]="['profil-management']" class="navbar__link"
             ><i class="pi pi-server"></i><span>Resources</span></a
           >
         </li>
         <li class="navbar__item">
-          <a href="#" class="navbar__link"
+          <a class="navbar__link"
             ><i class="pi pi-cog"></i><span>Settings</span></a
           >
         </li>
