--- a/src/app/pages/components/account/userinfo/userinfo.component.scss
+++ b/src/app/pages/components/account/userinfo/userinfo.component.scss
@@ -36,6 +36,10 @@ $background-color: #ecf0f1;
           display: flex;
           flex-direction: row;
           justify-content: space-between;
+
+          label{
+            margin-left: 8px;
+          }
         }
         .p-float-label {
           margin: 10px;
@@ -171,20 +175,13 @@ $background-color: #ecf0f1;
         border-bottom: 2px solid #1071b3;
       }
     }
-  }
- .ng-star-inserted{
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
 
-      label{
-        margin-left: 5px;
+    .radio{
+      label {
+        margin-right: 10px;
       }
     }
-    
-
- 
+  } 
 }
 
 @media (max-width: $breakpoint-tablet) {
