--- a/src/app/pages/components/account/userpassword/userpassword.component.scss
+++ b/src/app/pages/components/account/userpassword/userpassword.component.scss
@@ -1,3 +1,10 @@
+$primary-color: #3498db;
+$secondary-color: #1071b3;
+$danger-color: #e74c3c;
+$dark-text: #34495e;
+$light-text: #ecf0f1;
+$background-color: #ecf0f1;
+
 .container {
   display: flex;
   flex-direction: column;
@@ -44,7 +51,7 @@
         input {
           width: 100%; /* İkon boyutu kadar azalt */
           padding: 10px;
-          padding-left: 30px; /* İkonun sağında boşluk bırak */
+          padding-left: 35px; /* İkonun sağında boşluk bırak */
           font-size: 1rem;
           border: none;
           border-bottom: 2px solid #3498db; // veya istediğiniz renk
@@ -94,6 +101,43 @@
         &:hover {
           background-color: #1071b3; // veya istediğiniz renk
         }
+      }
+    }
+  }
+}
+
+:host ::ng-deep {
+  .radio {
+    margin-right: 5px;
+  }
+
+  .password.p-password {
+    position: relative;
+    width: 100%;
+    i {
+      position: absolute;
+      z-index: 1;
+      padding: 5px;
+      color: #000;
+      top: 50%;
+      left: 10px;
+      transform: translateY(-50%);
+      font-size: 1rem;
+    }
+    input {
+      width: 100%; /* İkon boyutu kadar azalt */
+      padding: 10px;
+      padding-left: 35px; /* İkonun sağında boşluk bırak */
+      font-size: 1rem;
+      border: none;
+      border-bottom: 2px solid #3498db; // veya istediğiniz renk
+      background-color: transparent;
+      color: #34495e; // veya istediğiniz renk
+      transition: border-color 0.3s;
+
+      &:focus {
+        outline: none;
+        border-bottom: 2px solid #1071b3; // veya istediğiniz renk
       }
     }
   }
